--- a/user-management.yaml
+++ b/user-management.yaml
@@ -1,211 +1,170 @@
 ---
-swagger: "2.0"
+openapi: 3.0.0
 info:
+  title: User Management Api
   description: |
     This is a sample User Management Api
-  version: 1.0.0
-  title: User Management Api
   contact:
     email: vnikabadze@unisens.ge
-host: virtserver.swaggerhub.com
-basePath: /vaskania/User-Management-Api/1.0.0
-tags:
-- name: user
-  description: Operations about user
-  externalDocs:
-    description: Find out more about our store
-    url: http://swagger.io
-schemes:
-- https
-- http
+  version: 1.0.0
+servers:
+- url: https://virtserver.swaggerhub.com/vaskania/User-Management/1.0.0
+  description: SwaggerHub API Auto Mocking
 paths:
   /users:
     get:
       tags:
-      - user
-      summary: Return all users from database
-      produces:
-      - application/json
-      parameters:
-      - in: body
-        name: body
-        description: List of user object
-        required: true
-        schema:
-          type: array
-          items:
-            $ref: '#/definitions/User'
+      - User
+      description: Get all users
       responses:
         "200":
-          description: username, firstName, lastName
-        default:
-          description: successful operation
-  /user?pageNumber=0&nPerPage=3:
-    get:
-      tags:
-      - user
-      summary: Creates list of users with given pageNumber and nPerPage
-      produces:
-      - application/json
-      parameters:
-      - in: body
-        name: body
-        description: List of user object
-        required: true
-        schema:
-          type: array
-          items:
-            $ref: '#/definitions/User'
-      responses:
-        default:
-          description: successful operation
-  /user/signup:
+          description: Get an array of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+  /user/register:
     post:
       tags:
-      - user
-      summary: Create user
-      description: This can only be done by unique username
-      produces:
-      - application/json
-      parameters:
-      - in: body
-        name: body
-        description: Created user object
-        required: true
-        schema:
-          $ref: '#/definitions/User'
+      - User
+      summary: Create new user
+      description: This can only be done with unique username
       responses:
-        default:
-          description: User created successfully
-  /user/signin:
+        "201":
+          description: New user was created successfully
+        "409":
+          description: Username already exists
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+  /user/login:
     post:
       tags:
-      - user
-      summary: Logs user into the system
-      produces:
-      - application/json
-      parameters:
-      - name: username
-        in: query
-        description: The username for login
-        required: true
-        type: string
-      - name: password
-        in: query
-        description: The password for login in clear text
-        required: true
-        type: string
+      - User
+      summary: Logs user
+      description: The username for login
       responses:
         "200":
-          description: Logged in successfully
-          schema:
-            type: string
+          description: logged in successfully'
         "400":
           description: Invalid username/password supplied
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
   /user/{id}:
     get:
-      tags:
-      - user
       summary: Get user by id
-      produces:
-      - application/json
       parameters:
       - name: id
         in: path
-        description: The id that needs to be fetched. Use user1 for testing.
         required: true
-        type: string
+        style: simple
+        explode: false
+        schema:
+          minimum: 1
+          type: string
+          description: The id that needs to be fetched.
       responses:
         "200":
-          description: successful operation
-          schema:
-            $ref: '#/definitions/User'
+          description: User profile fetched successfully
         "404":
           description: User not found
     delete:
       tags:
       - user
-      summary: Delete user by id
       description: This can only be done by the logged in user.
-      produces:
-      - application/json
       parameters:
       - name: id
         in: path
-        description: The id that needs to be deleted
         required: true
-        type: string
+        style: simple
+        explode: false
+        schema:
+          minimum: 1
+          type: string
+          description: The id that needs to be fetched.
       responses:
-        "400":
-          description: Invalid username supplied
+        "200":
+          description: User profile deleted successfully
         "404":
           description: User not found
-  /user/{id}/update-profile:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+  /user/update-profile/{id}:
     put:
       tags:
-      - user
+      - User
       summary: Updated user firstName or lastName
       description: This can only be done by the logged in user.
-      produces:
-      - application/json
       parameters:
       - name: id
         in: path
-        description: id that need to be updated
         required: true
-        type: string
-      - in: body
-        name: body
-        description: Updated user object
-        required: true
+        style: simple
+        explode: false
         schema:
-          $ref: '#/definitions/User'
+          minimum: 1
+          type: string
+          description: The id that needs to be fetched.
       responses:
-        "400":
-          description: Invalid user supplied
+        "200":
+          description: Updated user object
         "404":
           description: User not found
-  /user/{id}/update-password:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+  /user/update-password/{id}:
     put:
       tags:
-      - user
+      - User
       summary: Updated user password
       description: This can only be done by the logged in user.
-      produces:
-      - application/json
       parameters:
       - name: id
         in: path
-        description: id that need to be updated
         required: true
-        type: string
-      - in: body
-        name: body
-        description: Updated user object
-        required: true
+        style: simple
+        explode: false
         schema:
-          $ref: '#/definitions/User'
+          minimum: 1
+          type: string
+          description: The id that needs to be fetched.
       responses:
-        "400":
-          description: Invalid user supplied
+        "200":
+          description: Updated user password
         "404":
           description: User not found
-definitions:
-  User:
-    type: object
-    properties:
-      id:
-        type: integer
-        format: int64
-      username:
-        type: string
-      firstName:
-        type: string
-      lastName:
-        type: string
-      password:
-        type: string
-      phone:
-        type: string
-      deleted:
-        type: boolean
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+components:
+  schemas:
+    User:
+      required:
+      - password
+      - username
+      type: object
+      properties:
+        username:
+          type: string
+        password:
+          type: string
+        firstName:
+          type: string
+        lastName:
+          type: string
+        salt:
+          type: string
+        delete:
+          type: boolean
