--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dependencies": {
         "body-parser": "^1.19.1",
         "express": "^4.17.2",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.1.2",
         "pino": "^7.5.1",
         "pino-pretty": "^7.3.0",
