--- a/user-management.yaml
+++ b/user-management.yaml
@@ -101,8 +101,6 @@ paths:
                 $ref: '#/components/schemas/Error'
               example:
                 error: Username and password must be provided
-      security:
-      - basicAuth: []
   /user/{id}:
     get:
       summary: Get user by id
@@ -138,7 +136,7 @@ paths:
     delete:
       tags:
       - user
-      description: This can only be done by the logged in user.
+      description: This can only be done by User with Admin Role.
       parameters:
       - name: id
         in: path
@@ -191,13 +189,13 @@ paths:
               example:
                 error: User not found
       security:
-      - basicAuth: []
+      - bearerAuth: []
   /user/update-profile/{id}:
     put:
       tags:
       - User
       summary: Updated user firstName or lastName
-      description: This can only be done by the logged in user.
+      description: This can only be done by User with Admin Role.
       parameters:
       - name: id
         in: path
@@ -250,13 +248,13 @@ paths:
               example:
                 error: User not found
       security:
-      - basicAuth: []
+      - bearerAuth: []
   /user/update-password/{id}:
     put:
       tags:
       - User
       summary: Updated user password
-      description: This can only be done by the logged in user.
+      description: This can only be done by User with Admin Role.
       parameters:
       - name: id
         in: path
@@ -309,7 +307,7 @@ paths:
               example:
                 error: User not found
       security:
-      - basicAuth: []
+      - bearerAuth: []
 components:
   schemas:
     Error:
@@ -378,6 +376,7 @@ components:
         id:
           type: string
   securitySchemes:
-    basicAuth:
+    bearerAuth:
       type: http
-      scheme: basic
+      scheme: bearer
+      bearerFormat: JWT
