--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "body-parser": "^1.19.1",
         "express": "^4.17.2",
         "jsonwebtoken": "^8.5.1",
+        "moment": "^2.29.1",
         "mongoose": "^6.1.2",
         "pino": "^7.5.1",
         "pino-pretty": "^7.3.0",
